tests/lexer/valid/test_literals_mix.tok
1:1 INT_LITERAL "1" 1
1:3 STRING_LITERAL "\"a\"" a
1:7 FLOAT_LITERAL "2.0" 2
1:11 BOOL_LITERAL "false" false
1:16 END_OF_FILE ""
