tests/lexer/invalid/test_unterminated_string.tok
1:1 STRING_LITERAL "\"abc" abc
1:5 END_OF_FILE ""
